# blog-demo

./: Cargo.toml
models/: Cargo.toml
models/migrations/2023-05-21-114751_users/: up.sql
models/migrations/2023-05-21-114814_tags/: up.sql
models/migrations/2023-05-21-123436_posts/: up.sql
models/src/: lib.rs  post.rs  schema.rs  tag.rs  user.rs
