[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
uuid = { version = "1.3.3", features = ["v4"] }
